2011-02-22 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/announce.0.1.texi: Add draft release
	announcement for 0.1.
	* Documentation/GNUmakefile: Add rules for ANNOUNCE
	* GNUmakefile.preamble
	* Source/GNUmakefile:
	Move version number to the top level.

2011-02-22 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProxy.m: Fixed bug with method cache generation in
	the single-threaded case.

2011-02-22 Niels Grewe <niels.grewe@halbordnung.de>

	* GNUmakefile: Add packaging metadata.

2011-02-22 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/UsingDBus.texi: Document failure recovery
	procedures.

2011-02-22 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKEndpoint.m: Fix over-release bug where we didn't take
	into account the fact that libdbus also takes ownership for the
	context objects.
	* Source/DKProxy.m: Let DKDBus objects trigger the state sync
	between DKNotificationCenter and the D-Bus connection.
	* Source/DKNotificationCenter.m: Correctly replace the endpoint
	after reconnect. Implement state sync with the new D-Bus
	connection.

	Finish implementing reconnection logic for bus objects and
	notification centers.

2011-02-21 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKEndpointManager.m: Fix the method that fills the ring
	buffer to actually do the expected thing in single-threaded mode.
	Previously, it would directly execute the request even if it was
	requested not to wait, causing unexpected reentrancy for some
	things. Also factor out the code that implements fallback to
	NSInvocation into a separate method.
	* Source/DKPort.m: Use libdbus macro for interface name.
	* Source/DKEndpoint.m: Actually remove DKWatchers from the
	runloop when thy are deallocated.
	* Source/DKProxy.m: Refactor -_disconnected: a bit. Override
	-methodSignatureForSelector: for DKDBus in order to play nice
	with notification center that does need to call private methods
	on DKDBus.